New plugin: 'com.palantir.baseline-enable-preview-flag' (#1549)
Add the new line `apply plugin: 'com.palantir.baseline-enable-preview-flag'` to your subprojects block to enable the usage of unreleased java features (e.g. records, switch expressions, var keyword etc).

Note, this plugin is a no-op on any project where you have a low sourceCompatibility.